envoy-gateway/infrastructure/02-gateway/01-semoss-https-gateway.yaml
# ======================================================================
# Gateway - HTTP and HTTPS listener
# ======================================================================
# Purpose: Creates a loadbalancer with both HTTP and HTTPS
#          listeners redirecting all HTTP traffic to HTTPS
#
#
# Notes:
#   - The AWS LoadBalancer controller features (such as Security groups)
#     can be added as annotations
#   - AWS NLB REQUIRES a certificate
#   - Envoy needs a certificate to terminate the TLS connection
#  if the loadbalncer needs to route to services in different namespaces
#  then the allowedRoutes needs to be set to "all":
#  allowedRoutes:
#     namespaces:
#       from: All  # Allow HTTPRoutes from any namespace to attach
#
# ======================================================================
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: semoss-envoy-gateway
  namespace: semoss-envoy-path
spec:
  infrastructure:
    annotations:
      # creating an internal NLB
      service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
      # Loadbalancer can be either internal or external
      service.beta.kubernetes.io/aws-load-balancer-internal: "false"
      # adding SecurityGroup
      service.beta.kubernetes.io/aws-load-balancer-security-groups: "sg-xxx"
  gatewayClassName: envoy
  listeners:
  # HTTP listener for redirect
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All  #  HTTPRoute is created in the SAME namespace as Gateway
                    # ALL would allow HTTPRoutes created in a different namespace to attach
                    # THIS Gateway (needs ReferenceGrant created in the different NS
  # HTTPS listener
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      namespaces:
        from: All

    # Using self-signed cert because the AWS NLB REQUIRES an ACM certificate
    tls:
      mode: Terminate
      certificateRefs:
      - name: semoss-tls-cert
